; ModuleID = '/home/carl/AnghaBench/lede/target/linux/mediatek/files-4.19/drivers/net/phy/mtk/mt753x/extr_mt753x_nl.c_mt753x_nl_send_reply.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/mediatek/files-4.19/drivers/net/phy/mtk/mt753x/extr_mt753x_nl.c_mt753x_nl_send_reply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.genl_info = type { i32 }
%struct.genlmsghdr = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.genl_info*)* @mt753x_nl_send_reply to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mt753x_nl_send_reply(%struct.sk_buff* %0, %struct.genl_info* %1) #0 {
  %3 = alloca %struct.sk_buff*, align 8
  %4 = alloca %struct.genl_info*, align 8
  %5 = alloca %struct.genlmsghdr*, align 8
  %6 = alloca i8*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %3, align 8
  store %struct.genl_info* %1, %struct.genl_info** %4, align 8
  %7 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %8 = call i32 @nlmsg_hdr(%struct.sk_buff* %7)
  %9 = call %struct.genlmsghdr* @nlmsg_data(i32 %8)
  store %struct.genlmsghdr* %9, %struct.genlmsghdr** %5, align 8
  %10 = load %struct.genlmsghdr*, %struct.genlmsghdr** %5, align 8
  %11 = call i8* @genlmsg_data(%struct.genlmsghdr* %10)
  store i8* %11, i8** %6, align 8
  %12 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 @genlmsg_end(%struct.sk_buff* %12, i8* %13)
  %15 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %16 = load %struct.genl_info*, %struct.genl_info** %4, align 8
  %17 = call i32 @genlmsg_reply(%struct.sk_buff* %15, %struct.genl_info* %16)
  ret i32 %17
}

declare dso_local %struct.genlmsghdr* @nlmsg_data(i32) #1

declare dso_local i32 @nlmsg_hdr(%struct.sk_buff*) #1

declare dso_local i8* @genlmsg_data(%struct.genlmsghdr*) #1

declare dso_local i32 @genlmsg_end(%struct.sk_buff*, i8*) #1

declare dso_local i32 @genlmsg_reply(%struct.sk_buff*, %struct.genl_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
